@@ -1,3 +1,4 @@
+* Add basic circleci CI configuration
 * Allow to mount a volume for each container of the testnet so we can push logs to it for comparison purposes.
 * Added a step to sanity check to ensure testnet nodes are reporting to Prometheus
 * Added a new prometheus command that checks nodes are reporting correctly to Prometheus
